[package]
name = "ringside"
version = "0.0.1"
edition = "2024"
description = "A CLI tool that syncs git repositories into a local project directory"
license = "MIT"
repository = "https://github.com/bantamhq/ringside"
homepage = "https://github.com/bantamhq/ringside"
readme = "README.md"
keywords = ["git", "sync", "cli", "repository", "monorepo"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
tempfile = "3.10"
fs_extra = "1.3"
regex = "1.10"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
